--- a/src/404.html
+++ b/src/404.html
@@ -1,14 +1,25 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8">
-  <title>Redirecting...</title>
+  <meta charset="UTF-8" />
+  <title>Page Not Found</title>
   <script type="text/javascript">
-    var path = window.location.pathname;
-    window.location.replace("/#" + path);
+    // Single Page Apps for GitHub Pages
+    // https://github.com/rafgraph/spa-github-pages
+    (function (l) {
+      if (l.search[1] === '/' ) {
+        var decoded = l.search.slice(1).split('&').map(function(s) {
+          return s.replace(/~and~/g, '&')
+        }).join('?');
+        window.history.replaceState(null, null,
+          l.pathname.slice(0, -1) + decoded + l.hash
+        );
+      }
+    }(window.location))
   </script>
 </head>
 <body>
-<p>Redirecting... If you are not redirected, <a href="/">click here</a> to return to the homepage.</p>
+<h1>404 - Page Not Found</h1>
+<p>If you are not redirected automatically, follow this <a href="/">link</a>.</p>
 </body>
 </html>
